# problems

./: BunsanProtogen.json  CMakeLists.txt
go/bacs/problem/bacs-decoder/: broker_renderer.go  main.go  raw_renderer.go  renderer.go
go/bacs/problem/bacs-decoder/templates/: broker_index.html  decode.html  header.html  index.html  raw_index.html  render.html  result.html  single_index.html  single_result.html  single_task.html
go/bacs/problem/decoder/: broker.go  decoder.go  decoder_test.go  single.go  single_test.go
go/bacs/problem/decoder/mock/: decoder.go
